Make sure caption doesn't get overlapped by image

--- a/htdocs/components/22_static_content.css
+++ b/htdocs/components/22_static_content.css
@@ -198,5 +198,5 @@ div.gallery-preview .page-preview img { width:150px; height:100px;
 div.gallery-preview .page-preview img.zoom { width:300px; height: 200px; 
                                               z-index:10; top: -50px; left: -75px; }
 div.gallery-preview img.disabled { opacity: 0.5; filter: alpha(opacity=50); }
-div.preview-caption { display:inline-block; margin: 8px 0; }
+p.preview-caption { display:inline-block; margin: 8px 0; width: 620px; }
 
